--- a/src/styling/stats.css
+++ b/src/styling/stats.css
@@ -18,15 +18,15 @@
     color: #4A148C;
 
 }
-.card {
+.card-stats{
     background-color: white;
-    border: 2px solid #B39DDB; /* Lavender border */
+    border: 2px solid white; /* Lavender border */
     border-radius: 10px;
     padding: 5px;
     width: 80%;
     max-width: 400px;
     margin: 40px auto; /* Centering the card on the page */
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     display: flex;
     flex-direction: column;
     align-items: center;
