--- a/src/styling/checkin.css
+++ b/src/styling/checkin.css
@@ -105,7 +105,8 @@ body {
     color: white;
     text-decoration: none;
     border-radius: 5px;
-    max-width: 30%
+    max-width: 30%;
+    border : none;
    
   }
   .submit-card {
@@ -114,5 +115,6 @@ body {
     align-items: center; /* Center vertically if you have more height to the container */
     padding: 20px; /* Optional: adds padding inside the container */
   }
+  
   
   
